Prevent footer row from overlapping page content

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -5,6 +5,7 @@
   justify-content: space-between;
   mix-blend-mode: difference;
   padding: 24px 32px;
+  pointer-events: none;
   position: fixed;
   width: -webkit-fill-available;
   z-index: 1;
